dev-vis-backend-pricing: remove unneeded streams for maps and foreach calls, simplify collectors to list